fix: spacing

--- a/src/styles/specialisms.scss
+++ b/src/styles/specialisms.scss
@@ -2,6 +2,10 @@
     > .specialisms {
         background: #310A31;
 
+        .content {
+            gap: 4rem;
+        }
+
         &.disciplines {
             background: #8762CB;
         }
@@ -44,7 +48,7 @@
         .text {
             display: flex;
             align-self: flex-start;
-            margin: 2rem 0 4rem;
+            margin-top: 2rem;
             max-width: 45.0625rem;
 
             p {
@@ -54,7 +58,7 @@
         }
 
         .specialism-list-container {
-            margin: 3rem 2rem 0;
+            margin: 0 2rem;
 
             .specialism-list {
                 align-items: flex-start;
@@ -104,13 +108,13 @@
         }
 
         @include media-breakpoint-down(md) {
-            .text {
-                margin-bottom: 3rem;
+            .content {
+                gap: 3rem;
             }
 
             .specialism-list-container,
             &.sectors .specialism-list-container {
-                margin: 3rem 0 0;
+                margin: 0;
 
                 .specialism-list {
                     height: unset;
